feat: Implement import functionality and enhance array access; add AccessExpr and ImportStmt classes